src/test/ui/parser/issue-58094-missing-right-square-bracket.rs
// https://github.com/rust-lang/rust/issues/58094
// ignore-tidy-trailing-newlines
// error-pattern: aborting due to 2 previous errors
#[Ѕ